--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>Babe?</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
 
